# Note: keep this file in wiki format for easy pasting to the proto-ch wiki
# Note: keep milestone bullets in ticket numerical order for easier
#       reconciliation at release time

= GENI Portal Release Notes =

== 2.24 ==

== 2.23 ==
 * Grab latest topology from Jacks before calling validateSubmit from ReserveResources (#1126)
 * Restore highlighting of boxes on select (#1190)
 * Fix AM table view on slice-jacks  (#1187)
 * Add view rspec button to jacks app (#1202)
 * "Delete All" clears the Rspec and Reserve Resources button in Jacks Editor App (slice-add-resource-jacks) (#1191)
 * Fix map view to remove nodes with no lat/long info (#1240)
 * Fix handling of delete race-condition (delete returns before manifest 
   shows deletion) in jacks-app.js (#1241)
 * Change tabs on slice-jacks to "Graphical View" and "Aggregate View". (#1238)
 * Fix bug that incorrectly formats HTML and sets 'project_id' as a member_uid
   in case of changing slice/project membershop (#1242)
 * Fix bug that doesn't allow GRAM resources to turn green due to PHP fatal 
   error around GENI_PENDING scope. (#1243).
 * Make the downloaded request and manifest rspec be named with the slice: 
   <slicename>_<rspec_type>_rspec.xml (#1205).
 * On Jacks Add Resources, ensure topology changes are reflected in what is reserved. (#1226)

== 2.22 ==
 * Include link to NYU Poly WITest wireless site. (#773)
 * Show a proper error message or success message on updating SSH keys. (#973)
 * Fix headers in email that your lead request was received. (#1197)
 * Fix bug report to print list of aggregates correctly. (#1198)
 * Change label for add resources URL entry (#1201)
 * Use `email()` function to get user's address, not a `mail` attribute. (#1206)
 * Move included files to lib from portal (#1207)
 * Handle unknown AM URNs and URLs mroe gracefully. (#1212)
 * Exclude users with no public SSH keys from the generated omni_config. (#1215)
 * Update Jacks on allocation page (#1216)